tests/snapshots/simplify_matches__flatten_with_terminal.hvm.snap
---
source: tests/golden_tests.rs
input_file: tests/golden_tests/simplify_matches/flatten_with_terminal.hvm
---
(Foo) = λ%arg0 λ%arg1 (switch %arg0 { 0: λ%arg1 match %arg1 { A: match %arg1.b { B: B } }; _: λ%arg1 * } %arg1)

(main) = (Foo 2 (A B))

(B) = #B_t λB B

(A) = λb #A_t λA #A_t (A b)
