tests/snapshots/simplify_matches__nested.hvm.snap
---
source: tests/golden_tests.rs
input_file: tests/golden_tests/simplify_matches/nested.hvm
---
(Rule) = λ%arg0 match %arg0 { CtrA: (match %arg0.b { CtrB1: λ%arg0.a (%arg0.a %arg0.b.b); CtrB2: λ%arg0.a (match %arg0.b.a { CtrC: λ%arg0.a λ%arg0.b.b (%arg0.a %arg0.b.b) } %arg0.a %arg0.b.b) } %arg0.a); CtrB: %arg0.a }

(CtrC) = #Baz λCtrC CtrC

(CtrB2) = λa λb #Bar λCtrB1 #Bar λCtrB2 #Bar (CtrB2 a b)

(CtrB1) = λb #Bar λCtrB1 #Bar λCtrB2 #Bar (CtrB1 b)

(CtrB) = λa #Foo λCtrA #Foo λCtrB #Foo (CtrB a)

(CtrA) = λa λb #Foo λCtrA #Foo λCtrB #Foo (CtrA a b)
