tests/snapshots/simplify_matches__nested2.hvm.snap
---
source: tests/golden_tests.rs
input_file: tests/golden_tests/simplify_matches/nested2.hvm
---
(Foo) = λ%arg0 λ%arg1 (match %arg1 { List.cons: λ%arg0 (match %arg1.tail { List.cons: λ%arg0 λ%arg1.head (%arg0 %arg1.head %arg1.tail.head %arg1.tail.tail); List.nil: λ%arg0 λ%arg1.head (%arg0 (List.cons %arg1.head List.nil)) } %arg0 %arg1.head); List.nil: λ%arg0 (%arg0 List.nil) } %arg0)

(List.nil) = #List λList.cons #List λList.nil List.nil

(List.cons) = λhead λtail #List λList.cons #List λList.nil #List (List.cons head tail)
