tests/snapshots/simplify_matches__nested_0ary.hvm.snap
---
source: tests/golden_tests.rs
input_file: tests/golden_tests/simplify_matches/nested_0ary.hvm
---
(Unpack) = λ%arg0 λ%arg1 (match %arg1 { Cons: λ%arg0 (match %arg1.tail { Cons: λ%arg0 λ%arg1.head (%arg0 (Cons %arg1.head (Cons %arg1.tail.head %arg1.tail.tail))); Nil: λ%arg0 λ%arg1.head %arg1.head } %arg0 %arg1.head); Nil: λ%arg0 Nil } %arg0)

(Nil) = #list λCons #list λNil Nil

(Cons) = λhead λtail #list λCons #list λNil #list (Cons head tail)
